(chore): Add prefix to directive name and binding

--- a/src/app/common/components/featured-content/featured-content.component.html
+++ b/src/app/common/components/featured-content/featured-content.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="entity">
   <ng-container
     *ngIf="entity?.type === 'activity'"
-    [clientMeta]="{ medium: 'featured-content' }"
+    [m-clientMeta]="{ medium: 'featured-content' }"
   >
     <ng-template dynamic-host></ng-template>
   </ng-container>
