--- a/src/app/modules/channels/sorted/sorted.component.html
+++ b/src/app/modules/channels/sorted/sorted.component.html
@@ -1,4 +1,4 @@
-<ng-container [clientMeta]="{ source: 'feed/channel', medium: 'feed' }">
+<ng-container [m-clientMeta]="{ source: 'feed/channel', medium: 'feed' }">
   <ng-container *mIfFeature="'activity-composer'; else v1NewsfeedPoster">
     <m-composer
       *ngIf="isOwner()"
