--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -1,5 +1,5 @@
 <ng-container
-  [clientMeta]="{ source: 'feed/discovery/search', medium: 'feed' }"
+  [m-clientMeta]="{ source: 'feed/discovery/search', medium: 'feed' }"
 >
   <div class="m-tabs__container">
     <div class="m-tabs__tab">
