--- a/src/app/modules/groups/profile/feed/feed.component.html
+++ b/src/app/modules/groups/profile/feed/feed.component.html
@@ -1,4 +1,4 @@
-<ng-container [clientMeta]="{ source: 'feed/group', medium: 'feed' }">
+<ng-container [m-clientMeta]="{ source: 'feed/group', medium: 'feed' }">
   <m-group-profile-feed__sorted
     *ngIf="group"
     [group]="group"
