--- a/src/app/modules/legacy/components/cards/activity/activity.html
+++ b/src/app/modules/legacy/components/cards/activity/activity.html
@@ -1,4 +1,4 @@
-<ng-container clientMeta>
+<ng-container m-clientMeta>
   <!-- Owner block -->
   <div
     class="mdl-card__supporting-text mdl-color-text--grey-600 m-owner-block"
