--- a/src/app/modules/newsfeed/activity/activity.component.html
+++ b/src/app/modules/newsfeed/activity/activity.component.html
@@ -1,4 +1,4 @@
-<ng-container clientMeta>
+<ng-container m-clientMeta>
   <m-activity__ownerBlock *ngIf="service.displayOptions.showOwnerBlock">
     <ng-container class="m-activityOwnerBlock__right">
       <m-activity__metrics></m-activity__metrics>
