--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -1,4 +1,4 @@
-<ng-container [clientMeta]="{ medium: 'boost-rotator' }">
+<ng-container [m-clientMeta]="{ medium: 'boost-rotator' }">
   <div class="m-boost-rotator-tools">
     <span
       i1n="@@BOOST_ROTATOR__SHOWING_BOOSTS"
