--- a/src/app/modules/newsfeed/feeds/sorted.component.html
+++ b/src/app/modules/newsfeed/feeds/sorted.component.html
@@ -1,4 +1,4 @@
-<ng-container [clientMeta]="{ source: 'feed/discovery', medium: 'feed' }">
+<ng-container [m-clientMeta]="{ source: 'feed/discovery', medium: 'feed' }">
   <div class="minds-list">
     <m-search--bar
       [defaultSizes]="false"
