--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -1,4 +1,4 @@
-<ng-container [clientMeta]="{ source: 'feed/subscribed', medium: 'feed' }">
+<ng-container [m-clientMeta]="{ source: 'feed/subscribed', medium: 'feed' }">
   <div
     class="m-border mdl-color--green mdl-color-text--white m-newsfeed-boost-promo"
     *ngIf="newUserPromo"
