--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -1,4 +1,4 @@
-<ng-container [clientMeta]="{ source: 'single', medium: 'single' }">
+<ng-container [m-clientMeta]="{ source: 'single', medium: 'single' }">
   <div
     [class.m-pageLayout__container]="!showLegacyActivity"
     [class.m-newsfeed__single--legacy]="showLegacyActivity"
