--- a/src/app/modules/composer/components/preview/rich-embed-preview.component.scss
+++ b/src/app/modules/composer/components/preview/rich-embed-preview.component.scss
@@ -8,11 +8,13 @@
 
   .m-composerRichEmbedPreview__thumbnail {
     flex: 1;
+    max-height: calc(100% - 84px);
 
     > img {
       object-fit: cover;
       width: 100%;
       height: 100%;
+      max-height: 100%;
     }
   }
 
