Propegate canDelete from parent activity down comment tree #3120

--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -410,6 +410,7 @@
       [parent]="comment"
       [level]="level + 1"
       [canEdit]="canEdit"
+      [canDelete]="canDelete"
       *ngIf="showReplies && comment.can_reply"
     >
     </m-comments__thread>
