--- a/src/app/modules/language/language-bar.component.scss
+++ b/src/app/modules/language/language-bar.component.scss
@@ -60,6 +60,7 @@
       justify-content: center;
       align-items: center;
       outline: none;
+      cursor: pointer;
 
       @include m-theme() {
         border: 1px solid themed($m-borderColor--primary);
