Changed wording of public key #3129

--- a/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
@@ -62,7 +62,7 @@
         <div>
           <a (click)="display = Views.CreateAddress">Create a new address</a>
           <span>or</span>
-          <a (click)="display = Views.ProvideAddress">Use your private key</a>
+          <a (click)="display = Views.ProvideAddress">Use your public key</a>
         </div>
       </li>
       <p *ngIf="currentAddress">
