Removing trending timespan filters until performance issues are resolved

--- a/src/app/modules/discovery/feeds/settings.component.html
+++ b/src/app/modules/discovery/feeds/settings.component.html
@@ -5,7 +5,7 @@
 
   <div class="m-modalV2__body">
     <form class="m-formWrapper" [formGroup]="form">
-      <section
+      <!-- <section
         class="m-discoveryTagSettings__section"
         data-cy="discovery-settings-section--selected"
         *ngIf="(filter$ | async) === 'trending'"
@@ -29,7 +29,7 @@
             </label>
           </ng-container>
         </div>
-      </section>
+      </section> -->
       <section
         class="m-discoveryTagSettings__section"
         data-cy="discovery-settings-section--selected"
