(fix): angular 9 i18n issues

--- a/src/app/modules/blockchain/marketing/rewards.component.html
+++ b/src/app/modules/blockchain/marketing/rewards.component.html
@@ -95,7 +95,7 @@
               >
             </li>
 
-            <li i18n="@@COMMON__SUBSCRIBERS">
+            <li i18n="@@COMMON__SUBSCRIBERS__EQUALS">
               Subscribers =
               <em
                 >{contributionValues.subscribers, plural, =1
