--- a/src/app/modules/plus/subscription/subscription.component.html
+++ b/src/app/modules/plus/subscription/subscription.component.html
@@ -39,7 +39,7 @@
         *ngIf="pricing.offerFrom"
         i18n="@@PLUS_SUBSCRIPTION__PER_MONTH"
       >
-        {{ pricing.offerFrom }} per month
+        <span>{{ pricing.offerFrom }}</span> per month
       </span>
     </div>
 
