--- a/src/app/modules/upgrades/upgrade-options.component.html
+++ b/src/app/modules/upgrades/upgrade-options.component.html
@@ -90,7 +90,7 @@
         *ngIf="plusPricing.offerFrom"
         i18n="@@UPGRADE_OPTIONS__PER_MONTH"
       >
-        {{ plusPricing.offerFrom }} per month
+        <span>{{ plusPricing.offerFrom }}</span> per month
       </p>
     </div>
 
@@ -183,7 +183,7 @@
         *ngIf="proPricing.offerFrom"
         i18n="@@COMMON__PER_MONTH"
       >
-        {{ proPricing.offerFrom }} per month
+        <span>{{ proPricing.offerFrom }}</span> per month
       </p>
     </div>
 
