--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
@@ -33,9 +33,16 @@
       [routerLink]="service.canonicalUrl$ | async"
       class="m-activityOwnerBlock__permalink"
     >
+      <div *ngIf="isScheduled()" class="m-activityOwnerBlockPermalink__text">
+        <i class="material-icons">schedule</i>
+        <span>
+          {{ toReadableDate(entity.time_created) }}
+        </span>
+      </div>
       <span
         class="m-activityOwnerBlockPermalink__text--timestamp"
         [title]="entity.time_created * 1000 | date: 'medium'"
+        *ngIf="!isScheduled()"
       >
         {{ entity.time_created * 1000 | friendlydatediff }}
       </span>
