--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.scss
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.scss
@@ -81,4 +81,11 @@ m-activity__ownerBlock {
   @include m-theme() {
     color: themed($m-textColor--tertiary);
   }
+
+  .material-icons {
+    //padding-right: 4px;
+    //font-size: 20px;
+    font-size: initial;
+    vertical-align: text-top;
+  }
 }
