--- a/src/app/modules/language/language-modal/language-modal.component.scss
+++ b/src/app/modules/language/language-modal/language-modal.component.scss
@@ -30,7 +30,7 @@ m-languageModal {
       text-decoration: none;
 
       @include m-theme() {
-        text-shadow: 1px 1px 1px themed($m-blue-grey-800);
+        text-shadow: 0px 0px 1px themed($m-textColor--secondary);
       }
     }
   }
