(fix): trending tags title

--- a/src/app/modules/discovery/tags/sidebar-tags.component.html
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.html
@@ -1,4 +1,4 @@
-<m-sidebarWidget title="Trending Tags">
+<m-sidebarWidget title="Trending Tags" i18n-title="@@TRENDING__TAGS">
   <div class="m-sidebarWidget__body">
     <ul>
       <li
