Shouldnt be able to follow, block or report from logged out state

--- a/src/app/modules/newsfeed/activity/activity.component.html
+++ b/src/app/modules/newsfeed/activity/activity.component.html
@@ -12,7 +12,10 @@
       </span>
     </ng-container>
 
-    <m-activity__menu (deleted)="delete()"></m-activity__menu>
+    <m-activity__menu
+      (deleted)="delete()"
+      *ngIf="service.isLoggedIn$ | async"
+    ></m-activity__menu>
   </ng-container>
 </m-activity__ownerBlock>
 
